--- a/tab-doc.html
+++ b/tab-doc.html
@@ -19,7 +19,7 @@
           <div class="nav-links">
             
             <ul class="links">
-              <li><a href="acceuil.html">A propos De Nous</a></li>
+              <li><a href="index.html">A propos De Nous</a></li>
               <li>
                 <a href="#">Programmes</a>
                 <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
